crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@497.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE plt1_adv_p3 PARTITION OF plt1_adv FOR VALUES IN ('0003');"
---
CreateStmt@0..70
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..24
    Ident@13..24 "plt1_adv_p3"
  Whitespace@24..25 " "
  Partition@25..34 "PARTITION"
  Whitespace@34..35 " "
  Of@35..37 "OF"
  Whitespace@37..38 " "
  RangeVar@38..46
    Ident@38..46 "plt1_adv"
  Whitespace@46..47 " "
  For@47..50 "FOR"
  Whitespace@50..51 " "
  Values@51..57 "VALUES"
  Whitespace@57..58 " "
  PartitionBoundSpec@58..68
    InP@58..60 "IN"
    Whitespace@60..61 " "
    Ascii40@61..62 "("
    AConst@62..68
      Sconst@62..68 "'0003'"
  Ascii41@68..69 ")"
  Ascii59@69..70 ";"

