crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@498.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE plt1_adv_p4 PARTITION OF plt1_adv FOR VALUES IN (NULL, '0004', '0005');"
---
CreateStmt@0..84
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..24
    Ident@13..24 "plt1_adv_p4"
  Whitespace@24..25 " "
  Partition@25..34 "PARTITION"
  Whitespace@34..35 " "
  Of@35..37 "OF"
  Whitespace@37..38 " "
  RangeVar@38..46
    Ident@38..46 "plt1_adv"
  Whitespace@46..47 " "
  For@47..50 "FOR"
  Whitespace@50..51 " "
  Values@51..57 "VALUES"
  Whitespace@57..58 " "
  PartitionBoundSpec@58..82
    InP@58..60 "IN"
    Whitespace@60..61 " "
    Ascii40@61..62 "("
    AConst@62..66
      NullP@62..66 "NULL"
    Ascii44@66..67 ","
    Whitespace@67..68 " "
    AConst@68..74
      Sconst@68..74 "'0004'"
    Ascii44@74..75 ","
    Whitespace@75..76 " "
    AConst@76..82
      Sconst@76..82 "'0005'"
  Ascii41@82..83 ")"
  Ascii59@83..84 ";"

