crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@513.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.a, t1.c, t2.a, t2.c FROM plt1_adv t1 LEFT JOIN plt2_adv t2 ON (t1.a = t2.a AND t1.c = t2.c) WHERE t1.c IS NULL AND t1.b < 10 ORDER BY t1.a;"
---
SelectStmt@0..149
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "a"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t1"
      Ascii46@15..16 "."
      Ident@16..17 "c"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..23
    ColumnRef@19..23
      Ident@19..21 "t2"
      Ascii46@21..22 "."
      Ident@22..23 "a"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..29
    ColumnRef@25..29
      Ident@25..27 "t2"
      Ascii46@27..28 "."
      Ident@28..29 "c"
  Whitespace@29..30 " "
  From@30..34 "FROM"
  Whitespace@34..35 " "
  JoinExpr@35..100
    RangeVar@35..46
      Ident@35..43 "plt1_adv"
      Whitespace@43..44 " "
      Alias@44..46
        Ident@44..46 "t1"
    Whitespace@46..47 " "
    Left@47..51 "LEFT"
    Whitespace@51..52 " "
    Join@52..56 "JOIN"
    Whitespace@56..57 " "
    RangeVar@57..68
      Ident@57..65 "plt2_adv"
      Whitespace@65..66 " "
      Alias@66..68
        Ident@66..68 "t2"
    Whitespace@68..69 " "
    On@69..71 "ON"
    Whitespace@71..72 " "
    Ascii40@72..73 "("
    BoolExpr@73..100
      AExpr@73..84
        ColumnRef@73..77
          Ident@73..75 "t1"
          Ascii46@75..76 "."
          Ident@76..77 "a"
        Whitespace@77..78 " "
        Ascii61@78..79 "="
        Whitespace@79..80 " "
        ColumnRef@80..84
          Ident@80..82 "t2"
          Ascii46@82..83 "."
          Ident@83..84 "a"
      Whitespace@84..85 " "
      And@85..88 "AND"
      Whitespace@88..89 " "
      AExpr@89..100
        ColumnRef@89..93
          Ident@89..91 "t1"
          Ascii46@91..92 "."
          Ident@92..93 "c"
        Whitespace@93..94 " "
        Ascii61@94..95 "="
        Whitespace@95..96 " "
        ColumnRef@96..100
          Ident@96..98 "t2"
          Ascii46@98..99 "."
          Ident@99..100 "c"
  Ascii41@100..101 ")"
  Whitespace@101..102 " "
  Where@102..107 "WHERE"
  Whitespace@107..108 " "
  BoolExpr@108..134
    NullTest@108..120
      ColumnRef@108..112
        Ident@108..110 "t1"
        Ascii46@110..111 "."
        Ident@111..112 "c"
      Whitespace@112..113 " "
      Is@113..115 "IS"
      Whitespace@115..116 " "
      NullP@116..120 "NULL"
    Whitespace@120..121 " "
    And@121..124 "AND"
    Whitespace@124..125 " "
    AExpr@125..134
      ColumnRef@125..129
        Ident@125..127 "t1"
        Ascii46@127..128 "."
        Ident@128..129 "b"
      Whitespace@129..130 " "
      Ascii60@130..131 "<"
      Whitespace@131..132 " "
      AConst@132..134
        Iconst@132..134 "10"
  Whitespace@134..135 " "
  SortBy@135..148
    Order@135..140 "ORDER"
    Whitespace@140..141 " "
    By@141..143 "BY"
    Whitespace@143..144 " "
    ColumnRef@144..148
      Ident@144..146 "t1"
      Ascii46@146..147 "."
      Ident@147..148 "a"
  Ascii59@148..149 ";"

